2020/11スケジュールを追加。ドキュメントを整形

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
     <!-- トップの画像 -->
     <div class="site-blocks-cover overlay" style="background-image: url(images/top.jpg);" data-aos="fade"
       id="home-section">
-      <div class="container">      
+      <div class="container">
 
         <div class="row align-items-center justify-content-center">
 
@@ -114,7 +114,7 @@
                 11/7(土) キッズ体験会 開催！
                 <br>詳しくはこちら
               </a>
-              
+
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             <a href="doc/20201107_kids.pdf" target="_blank">
-            <font color="red">キッズ(未就学児) 練習体験会を開催いたします！！</font>
+              <font color="red">キッズ(未就学児) 練習体験会を開催いたします！！</font>
               <br>日時: 2020/11/7 (土) 8:30-10:00 (8時より受付)
               <br>場所: 等々力緑地 第1サッカー場
             </a>
@@ -271,27 +271,26 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h3 class="schedule-month">2020/09</h3>
+            <h3 class="schedule-month">2020/10</h3>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=488932786&single=true"
+            <div class="btn-group" role="group" aria-label="Schedule Contents">
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1040625130&single=true"
                 role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=488932786&single=true&output=pdf"
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1040625130&single=true&output=pdf"
                 role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
             </div>
           </div>
         </div>
-
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h3 class="schedule-month">2020/10</h3>
+            <h3 class="schedule-month">2020/11</h3>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1040625130&single=true"
+            <div class="btn-group" role="group" aria-label="Schedule Contents">
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=173398329&single=true"
                 role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1040625130&single=true&output=pdf"
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=173398329&single=true&output=pdf"
                 role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
             </div>
           </div>
@@ -327,7 +326,8 @@
               <h3 class="h3 mb-4 text-black">入部届の提出</h3>
               入部届につきましては、所定のフォーマットに記入の上、紙もしくはPDFにて担当コーチにご提出ください。
             </div>
-            <p><a href="https://docs.google.com/document/d/1NGdcYjDCZ1pYRj47cxcG9Hw1TyteY9e12U3OHs62tm0/edit?usp=sharing"
+            <p><a
+                href="https://docs.google.com/document/d/1NGdcYjDCZ1pYRj47cxcG9Hw1TyteY9e12U3OHs62tm0/edit?usp=sharing"
                 class="smoothscroll btn btn-primary" target="_blank">入部届</a>
             </p>
           </div>
@@ -361,7 +361,8 @@
                   <div>
                     <h3>体験入部への申込み</h3>
                     <p>
-                      <a href="#team-schedule">スケジュール</a>で練習日を確認の上、<a href="#contact-section">お問い合わせフォーム</a>より、以下の必要事項をご連絡ください。</p>
+                      <a href="#team-schedule">スケジュール</a>で練習日を確認の上、<a
+                        href="#contact-section">お問い合わせフォーム</a>より、以下の必要事項をご連絡ください。</p>
                     <ul class="list-unstyled ul-check success">
                       <li>参加希望日</li>
                       <li>名前（漢字・ひらがな）</li>
@@ -471,7 +472,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>- [2020.09.21] 第70回 湘南チャレンジ杯 優勝</li>
                     <li>- [2020.09.19] 東住チャレンジカップ 優勝</li>
-		    <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
+                    <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
                     <li>- [2019.10.27] LIGA DOKKOI 優勝</li>
                     <li>- [2019.09.14-16] パーシモン杯 準優勝</li>
                     <li>- [2019.08.12-14] 時の栖カップ 優勝</li>
@@ -579,8 +580,12 @@
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1u3rOUtOvQt5aXn541v-mOAAOFeBSqjQAiVtfp30ZRBg/edit#gid=0" role="button" target="_blank">2020年</a>
-                    <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1WOcu2mdtipN53rUwWXSZ_Kf_cNAbVxAik8y1pJ7KEIQ/edit#gid=0" role="button" target="_blank">2019年</a>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/1u3rOUtOvQt5aXn541v-mOAAOFeBSqjQAiVtfp30ZRBg/edit#gid=0"
+                      role="button" target="_blank">2020年</a>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/1WOcu2mdtipN53rUwWXSZ_Kf_cNAbVxAik8y1pJ7KEIQ/edit#gid=0"
+                      role="button" target="_blank">2019年</a>
                     <a class="btn btn-primary" href="result/fc2011/result1.htm" role="button" target="_blank">2018年</a>
                   </div>
                 </div>
@@ -601,7 +606,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
-			<li>- [2020.10.25]川崎市中原区春季低学年大会 優勝</li>
+                    <li>- [2020.10.25]川崎市中原区春季低学年大会 優勝</li>
                     <li>- [2020.07.24]全力蹴球カップ 3位</li>
                     <li>- [2020.02.01] 平間カップ 準優勝</li>
                     <li>- [2020.01.13] 大ヶ谷戸杯 ブルー優勝 ホワイト5位</li>
@@ -622,8 +627,10 @@
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result2.htm" role="button" target="_blank">2020年</a>
-                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result1.htm" role="button" target="_blank">2019年</a>
+                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result2.htm"
+                      role="button" target="_blank">2020年</a>
+                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result1.htm"
+                      role="button" target="_blank">2019年</a>
                   </div>
                 </div>
               </div>
@@ -660,7 +667,8 @@
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result1.htm" role="button" target="_blank">2020年</a>
+                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result1.htm"
+                      role="button" target="_blank">2020年</a>
                   </div>
                 </div>
               </div>
