4年生 戦績が誤っていたので修正

--- a/public/index.html
+++ b/public/index.html
@@ -522,7 +522,7 @@
                     <li>- [2020.02.09] セルジオ越後杯 準優勝</li>
                     <li>- [2020.01.13] 大豆戸カップ 優勝</li>
                     <li>- [2019.12.08] U-9川崎市秋季サッカー大会 ベスト８</li>
-                    <li>- [2019.10.20] アントラーズautumn festival 準優勝</li>
+                    <li>- [2019.10.20] アントラーズautumn festival 優勝</li>
                   </ul>
                 </div>
               </div>
