--- a/public/index.html
+++ b/public/index.html
@@ -536,7 +536,8 @@
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <button type="button" class="btn btn-secondary">2020年</button>
+                    <a class="btn btn-primary" href="result/fc2010/result/result4.htm" role="button"
+                      target="_blank">2020年</a>
                     <a class="btn btn-primary" href="result/fc2010/result/result3.htm" role="button"
                       target="_blank">2019年</a>
                     <a class="btn btn-primary" href="result/fc2010/result/result2.htm" role="button"
