キッズ体験会が終了したので、お知らせを修正。

--- a/public/index.html
+++ b/public/index.html
@@ -109,11 +109,13 @@
             <h1 class="text-uppercase mb-5 top-image-text" data-aos="fade-up">Football Club<br>Nakahara</h1>
 
             <div data-aos="fade-up" data-aos-delay="100">
-              <!--<a href="#team-schedule" class="btn smoothscroll btn-primary mr-2 mb-2">スケジュール</a>-->
-              <a href="doc/20201107_kids.pdf" class="btn smoothscroll btn-primary mr-2 mb-2" target="_blank">
-                11/7(土) キッズ体験会 開催！
-                <br>詳しくはこちら
-              </a>
+              <a href="#team-schedule" class="btn smoothscroll btn-primary mr-2 mb-2">スケジュール</a>
+              <!--
+                <a href="doc/20201107_kids.pdf" class="btn smoothscroll btn-primary mr-2 mb-2" target="_blank">
+                  11/7(土) キッズ体験会 開催！
+                  <br>詳しくはこちら
+                </a>
+              -->
 
             </div>
           </div>
@@ -137,6 +139,17 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h4 class="info-date">2020.11.8</h4>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+              11/7(土) キッズ体験会を開催いたしました。
+              (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link" target="_blank">体験会の様子はこちら</a>)
+              <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
+          </div>
+        </div>
+        <!--
+        <div class="row justify-content-center">
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h4 class="info-date">2020.10.15</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
@@ -147,7 +160,7 @@
             </a>
           </div>
         </div>
-
+      -->
       </div>
     </section>
 
