--- a/public/index.html
+++ b/public/index.html
@@ -532,6 +532,9 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2020.11] かわしん杯 ブルー：ベスト8 ホワイト：ベスト16</li>
+                    <li>- [2020.08.16] カルペソールサマーカップ 優勝</li>
+                    <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
                     <li>- [2020.02.09] セルジオ越後杯 準優勝</li>
                     <li>- [2020.01.13] 大豆戸カップ 優勝</li>
                     <li>- [2019.12.08] U-9川崎市秋季サッカー大会 ベスト８</li>
