4年生　戦歴のリンクをgoogleスプレッドシートに変更

--- a/public/index.html
+++ b/public/index.html
@@ -552,7 +552,8 @@
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <a class="btn btn-primary" href="result/fc2010/result/result4.htm" role="button"
+                    <a class="btn btn-primary" 
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSuoQfroGv0MpTd5zXev_Wm9tyuKU80r0sZZe7l4EMUtB5EoaplrXiqdoL48E7Ww/pubhtml?gid=1634873165&single=true" role="button"
                       target="_blank">2020年</a>
                     <a class="btn btn-primary" href="result/fc2010/result/result3.htm" role="button"
                       target="_blank">2019年</a>
