レイアウトの修正

--- a/public/index.html
+++ b/public/index.html
@@ -142,9 +142,10 @@
             <h4 class="info-date">2020.11.8</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-              11/7(土) キッズ体験会を開催いたしました。
-              (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link" target="_blank">体験会の様子はこちら</a>)
-              <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
+            11/7(土) キッズ体験会を開催いたしました。
+            (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link"
+              target="_blank">体験会の様子はこちら</a>)
+            <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
           </div>
         </div>
         <!--
@@ -281,8 +282,6 @@
             <h1 class="section-title mb-0">スケジュール</h1>
           </div>
         </div>
-        
-        <div class="row justify-content-center">
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
@@ -291,25 +290,26 @@
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
             <div class="btn-group" role="group" aria-label="Schedule Contents">
               <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=842259915&single=true"
-              role="button" class="btn btn-outline-primary" target="_blank">html版</a>
+                role="button" class="btn btn-outline-primary" target="_blank">html版</a>
               <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=842259915&single=true&output=pdf"
-              role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+                role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-          <h3 class="schedule-month">2021/03</h3>
-        </div>
-        <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-          <div class="btn-group" role="group" aria-label="Schedule Contents">
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1110095414&single=true"
-              role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-            <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1110095414&single=true&output=pdf"
-              role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+        <div class="row justify-content-center">
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h3 class="schedule-month">2021/03</h3>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            <div class="btn-group" role="group" aria-label="Schedule Contents">
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1110095414&single=true"
+                role="button" class="btn btn-outline-primary" target="_blank">html版</a>
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1110095414&single=true&output=pdf"
+                role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+            </div>
           </div>
         </div>
-      </div>
 
       </div>
     </section>
@@ -373,12 +373,14 @@
               <div class="col-md-12 mb-md-5 mb-0 col-lg-6" data-aos="fade-up" data-aos-delay="">
                 <div class="unit-4">
                   <div class="unit-4-icon mr-4 mb-3">
-                    <span class="text-primary"><img src="fonts/flaticon/substitution.png"></span></div>
+                    <span class="text-primary"><img src="fonts/flaticon/substitution.png"></span>
+                  </div>
                   <div>
                     <h3>体験入部への申込み</h3>
                     <p>
                       <a href="#team-schedule">スケジュール</a>で練習日を確認の上、<a
-                        href="#contact-section">お問い合わせフォーム</a>より、以下の必要事項をご連絡ください。</p>
+                        href="#contact-section">お問い合わせフォーム</a>より、以下の必要事項をご連絡ください。
+                    </p>
                     <ul class="list-unstyled ul-check success">
                       <li>参加希望日</li>
                       <li>名前（漢字・ひらがな）</li>
@@ -393,7 +395,8 @@
               <div class="col-md-12 mb-md-5 mb-0 col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="unit-4">
                   <div class="unit-4-icon mr-4 mb-3">
-                    <span class="text-primary"><img src="fonts/flaticon/cap.png"></span></div>
+                    <span class="text-primary"><img src="fonts/flaticon/cap.png"></span>
+                  </div>
                   <div>
                     <h3>当日用意するもの</h3>
                     <p>体験入部の際は、こちらの持ち物をご用意ください。</p>
@@ -555,9 +558,9 @@
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2022年</button>
                     <button type="button" class="btn btn-secondary">2021年</button>
-                    <a class="btn btn-primary" 
-                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSuoQfroGv0MpTd5zXev_Wm9tyuKU80r0sZZe7l4EMUtB5EoaplrXiqdoL48E7Ww/pubhtml?gid=1634873165&single=true" role="button"
-                      target="_blank">2020年</a>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSuoQfroGv0MpTd5zXev_Wm9tyuKU80r0sZZe7l4EMUtB5EoaplrXiqdoL48E7Ww/pubhtml?gid=1634873165&single=true"
+                      role="button" target="_blank">2020年</a>
                     <a class="btn btn-primary" href="result/fc2010/result/result3.htm" role="button"
                       target="_blank">2019年</a>
                     <a class="btn btn-primary" href="result/fc2010/result/result2.htm" role="button"
