--- a/public/index.html
+++ b/public/index.html
@@ -441,10 +441,10 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
-                    <li>- [2020.02.23]寒川SC創立40周年記念招待 少年サッカー大会 優勝</li>
-                    <li>- [2020.02.15]U-11サンライズカップ 優勝</li>
-                    <li>- [2020.02.16]第11回川崎ケーブルテレビ杯新人戦サッカー大会 ベスト４</li>
-                    <li>- [2020.01.09]第11回川崎ケーブルテレビ杯新人戦サッカー大会 中原区２位</li>
+                    <li>- [2020.02.23] 寒川SC創立40周年記念招待 少年サッカー大会 優勝</li>
+                    <li>- [2020.02.15] U-11サンライズカップ 優勝</li>
+                    <li>- [2020.02.16] 第11回川崎ケーブルテレビ杯新人戦サッカー大会 ベスト４</li>
+                    <li>- [2020.01.09] 第11回川崎ケーブルテレビ杯新人戦サッカー大会 中原区２位</li>
                   </ul>
                 </div>
               </div>
@@ -489,6 +489,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.02.20] 第12回 ケーブルテレビ杯 新人戦 ベスト4</li>
                     <li>- [2020.09.21] 第70回 湘南チャレンジ杯 優勝</li>
                     <li>- [2020.09.19] 東住チャレンジカップ 優勝</li>
                     <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
@@ -630,9 +631,9 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
-                    <li>- [2020.12.20]川崎低学年大会チャンピオンズリーグ 優勝</li>
-                    <li>- [2020.10.25]川崎市中原区春季低学年大会 優勝</li>
-                    <li>- [2020.07.24]全力蹴球カップ 3位</li>
+                    <li>- [2020.12.20] 川崎低学年大会チャンピオンズリーグ 優勝</li>
+                    <li>- [2020.10.25] 川崎市中原区春季低学年大会 優勝</li>
+                    <li>- [2020.07.24] 全力蹴球カップ 3位</li>
                     <li>- [2020.02.01] 平間カップ 準優勝</li>
                     <li>- [2020.01.13] 大ヶ谷戸杯 ブルー優勝 ホワイト5位</li>
                     <li>- [2019.12.15] フレネミー杯 優勝</li>
