--- a/public/index.html
+++ b/public/index.html
@@ -676,6 +676,8 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2020.12.27] 第35回MAT杯1年生大会 4位</li>
+                    <li>- [2020.11.23] 東住チャレンジカップU-7 4位</li>
                     <li>- [2020.08.02] フレネミー杯 優勝</li>
                   </ul>
                 </div>
