--- a/public/index.html
+++ b/public/index.html
@@ -489,7 +489,9 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
-                    <li>- [2021.02.20] 第12回 ケーブルテレビ杯 新人戦 ベスト4</li>
+                    <li>- [2021.02.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 ベスト4</li>
+                    <li>- [2021.02.13] 全力蹴球カップ チャンピオンシップ 3位</li>
+                    <li>- [2020.12.20] 第12回 川崎ケーブルテレビ杯 新人戦 サッカー大会 中原区 1位</li>
                     <li>- [2020.09.21] 第70回 湘南チャレンジ杯 優勝</li>
                     <li>- [2020.09.19] 東住チャレンジカップ 優勝</li>
                     <li>- [2020.07.23] 全力蹴球カップ 準優勝</li>
