4月予定表を追記, IE11 暫定対応を追加

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,17 @@
 
   <link rel="apple-touch-icon" type="image/png" href="favicons/apple-touch-icon-180x180.png">
   <link rel="icon" type="image/png" href="favicons/icon-192x192.png">
+  <style>
+    /* IE11 */
+    @media all and (-ms-high-contrast:none) {
+
+      *::-ms-backdrop,
+      [data-aos^=fade][data-aos^=fade],
+      [data-aos^=zoom][data-aos^=zoom] {
+        opacity: 1;
+      }
+    }
+  </style>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -285,20 +296,6 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h3 class="schedule-month">2021/02</h3>
-          </div>
-          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
-            <div class="btn-group" role="group" aria-label="Schedule Contents">
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=842259915&single=true"
-                role="button" class="btn btn-outline-primary" target="_blank">html版</a>
-              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=842259915&single=true&output=pdf"
-                role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
             <h3 class="schedule-month">2021/03</h3>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
@@ -310,6 +307,21 @@
             </div>
           </div>
         </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
+            <h3 class="schedule-month">2021/04</h3>
+          </div>
+          <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            <div class="btn-group" role="group" aria-label="Schedule Contents">
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pubhtml?gid=1775459378&single=true"
+                role="button" class="btn btn-outline-primary" target="_blank">html版</a>
+              <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOmgpe_ioHFw4rNdtMkbnwazqMDngQwoQFZCR4TCUA8v0G8Mq-aRgNOKdoI20REdWAXzr68w36auYM/pub?gid=1775459378&single=true&output=pdf"
+                role="button" class="btn btn-outline-secondary" target="_blank">PDF版</a>
+            </div>
+          </div>
+        </div>
+
 
       </div>
     </section>
