--- a/public/index.html
+++ b/public/index.html
@@ -789,12 +789,15 @@
               体験入部、練習試合の申込は、お問い合わせフォームからお願いします。
             </P>
             <noscript>
-              <p><font color="red">
-                (注) Javascript が有効になっていないため、正常に送信できない可能性があります。
-                <a href="https://forms.gle/8Tzf69oQN6PSnqtn7" target="_blank">
-                  お問合せフォーム
-                </a>
-                をご利用ください。</font></p>
+              <p>
+                <font color="red">
+                  (注) Javascript が有効になっていないため、正常に送信できない可能性があります。
+                  <a href="https://forms.gle/8Tzf69oQN6PSnqtn7" target="_blank">
+                    お問合せフォーム
+                  </a>
+                  をご利用ください。
+                </font>
+              </p>
             </noscript>
           </div>
         </div>
@@ -840,7 +843,14 @@
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="text-black" for="message">本文</label>
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control"
+                    maxlength="1000"></textarea>
+                  <label class="text-black" for="message">※ 最大文字数は 1000文字となります。最大文字数を超える場合は
+                    <a href="https://forms.gle/8Tzf69oQN6PSnqtn7" target="_blank">
+                      お問合せフォーム
+                    </a>
+                    をご利用ください。
+                  </label>
                 </div>
               </div>
 
