--- a/public/index.html
+++ b/public/index.html
@@ -696,6 +696,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2021.03.27] ラゾクラック杯1年生大会 3位</li>
                     <li>- [2020.12.27] 第35回MAT杯1年生大会 4位</li>
                     <li>- [2020.11.23] 東住チャレンジカップU-7 4位</li>
                     <li>- [2020.08.02] フレネミー杯 優勝</li>
