2021年度の新学年に更新(主な戦績を更新)

--- a/public/index.html
+++ b/public/index.html
@@ -156,13 +156,16 @@
 
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2" data-aos="fade-up" data-aos-delay="">
-            <h4 class="info-date">2020.11.8</h4>
+            <h4 class="info-date">2021.4.1</h4>
           </div>
           <div class="col-lg-7 mb-5" data-aos="fade-up" data-aos-delay="">
+            新年度 (2021年度) に対応いたしました。
+            <!--
             11/7(土) キッズ体験会を開催いたしました。
             (<a href="https://www.instagram.com/p/CHRpiAfB0LT/?utm_source=ig_web_copy_link"
               target="_blank">体験会の様子はこちら</a>)
             <br><a href="#team-trial">体験入部</a>は全学年で可能ですので、ご興味がありましたら、ぜひご検討ください。
+            -->
           </div>
         </div>
         <!--
@@ -455,54 +458,6 @@
             <div class="card-body text-primary">
               <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-5 team-photo-box">
-                  <img src="images/fc2008.jpg" alt="Image" class="img-fluid team-photo">
-                </div>
-                <div class="col-lg-6 col-md-7">
-                  <ul class="list-unstyled mt-3 mb-4">
-                    <li>- [2020.02.23] 寒川SC創立40周年記念招待 少年サッカー大会 優勝</li>
-                    <li>- [2020.02.15] U-11サンライズカップ 優勝</li>
-                    <li>- [2020.02.16] 第11回川崎ケーブルテレビ杯新人戦サッカー大会 ベスト４</li>
-                    <li>- [2020.01.09] 第11回川崎ケーブルテレビ杯新人戦サッカー大会 中原区２位</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="card-footer">
-              <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-5 card-footer-title">
-                  各年度の試合結果
-                </div>
-                <div class="col-lg-6 col-md-7">
-                  <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
-                    <a class="btn btn-primary"
-                      href="https://docs.google.com/spreadsheets/d/1sPZbDUDSZZgaokAf8uwC--ypYy5GSUL1rKqt8p1xl9s/edit#gid=1719015388"
-                      role="button" target="_blank">2020年</a>
-                    <a class="btn btn-primary"
-                      href="https://docs.google.com/spreadsheets/d/1sPZbDUDSZZgaokAf8uwC--ypYy5GSUL1rKqt8p1xl9s/edit#gid=78148686"
-                      role="button" target="_blank">2019年</a>
-                    <a class="btn btn-primary"
-                      href="https://docs.google.com/spreadsheets/d/1sPZbDUDSZZgaokAf8uwC--ypYy5GSUL1rKqt8p1xl9s/edit#gid=753260687"
-                      role="button" target="_blank">2018年</a>
-                    <a class="btn btn-primary"
-                      href="https://docs.google.com/spreadsheets/d/1sPZbDUDSZZgaokAf8uwC--ypYy5GSUL1rKqt8p1xl9s/edit#gid=0"
-                      role="button" target="_blank">2017年</a>
-                    <a class="btn btn-primary" href="result/fc2008/result2.htm" role="button" target="_blank">2016年</a>
-                    <a class="btn btn-primary" href="result/fc2008/result1.htm" role="button" target="_blank">2015年</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card-result" id="result_5">
-          <div class="card mb-4 shadow-sm" data-aos="fade-up">
-            <div class="card-header">
-              <h3>5年生</h3>
-            </div>
-            <div class="card-body text-primary">
-              <div class="row justify-content-center">
-                <div class="col-lg-6 col-md-5 team-photo-box">
                   <img src="images/fc2009.jpg" alt="Image" class="img-fluid team-photo">
                 </div>
                 <div class="col-lg-6 col-md-7">
@@ -547,10 +502,10 @@
           </div>
         </div>
 
-        <div class="card-result" id="result_4">
+        <div class="card-result" id="result_5">
           <div class="card mb-4 shadow-sm" data-aos="fade-up">
             <div class="card-header">
-              <h3>4年生</h3>
+              <h3>5年生</h3>
             </div>
             <div class="card-body text-primary">
               <div class="row justify-content-center">
@@ -595,10 +550,10 @@
           </div>
         </div>
 
-        <div class="card-result" id="result_3">
+        <div class="card-result" id="result_4">
           <div class="card mb-4 shadow-sm" data-aos="fade-up">
             <div class="card-header">
-              <h3>3年生</h3>
+              <h3>4年生</h3>
             </div>
             <div class="card-body text-primary">
               <div class="row justify-content-center">
@@ -639,10 +594,10 @@
           </div>
         </div>
 
-        <div class="card-result" id="result_2">
+        <div class="card-result" id="result_3">
           <div class="card mb-4 shadow-sm" data-aos="fade-up">
             <div class="card-header">
-              <h3>2年生</h3>
+              <h3>3年生</h3>
             </div>
             <div class="card-body text-primary">
               <div class="row justify-content-center">
@@ -684,10 +639,10 @@
           </div>
         </div>
 
-        <div class="card-result" id="result_1">
+        <div class="card-result" id="result_2">
           <div class="card mb-4 shadow-sm" data-aos="fade-up">
             <div class="card-header">
-              <h3>１年生</h3>
+              <h3>2年生</h3>
             </div>
             <div class="card-body text-primary">
               <div class="row justify-content-center">
@@ -718,6 +673,43 @@
                     <button type="button" class="btn btn-secondary">2021年</button>
                     <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2013/result/result1.htm"
                       role="button" target="_blank">2020年</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-result" id="result_1">
+          <div class="card mb-4 shadow-sm" data-aos="fade-up">
+            <div class="card-header">
+              <h3>1年生</h3>
+            </div>
+            <div class="card-body text-primary">
+              <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-5 team-photo-box">
+                  <!-- <img src="images/fc2014.jpg" alt="Image" class="img-fluid team-photo">-->
+                </div>
+                <div class="col-lg-6 col-md-7">
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>- (Comming Soon ...)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="card-footer">
+              <div class="row justify-content-center">
+                <div class="col-lg-3 col-md-5 card-footer-title">
+                  各年度の試合結果
+                </div>
+                <div class="col-lg-6 col-md-7">
+                  <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
+                    <button type="button" class="btn btn-secondary">2026年</button>
+                    <button type="button" class="btn btn-secondary">2025年</button>
+                    <button type="button" class="btn btn-secondary">2024年</button>
+                    <button type="button" class="btn btn-secondary">2023年</button>
+                    <button type="button" class="btn btn-secondary">2022年</button>
+                    <button type="button" class="btn btn-secondary">2021年</button>
                   </div>
                 </div>
               </div>
