--- a/public/index.html
+++ b/public/index.html
@@ -626,8 +626,9 @@
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2024年</button>
                     <button type="button" class="btn btn-secondary">2023年</button>
-                    <button type="button" class="btn btn-secondary">2022年</button>
-                    <button type="button" class="btn btn-secondary">2021年</button>
+                    <button type="button" class="btn btn-secondary">2022年</button>                    
+                    <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result3.htm"
+                      role="button" target="_blank">2021年</a>
                     <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result2.htm"
                       role="button" target="_blank">2020年</a>
                     <a class="btn btn-primary" href="http://fcnakahara.nobody.jp/fc2012/result/result1.htm"
