--- a/public/index.html
+++ b/public/index.html
@@ -562,6 +562,8 @@
                 </div>
                 <div class="col-lg-6 col-md-7">
                   <ul class="list-unstyled mt-3 mb-4">
+                    <li>- [2020.12.27] 入二杯 準優勝</li>
+                    <li>- [2020.11.15] Ｎリーグ（Ｂリーグ） 優勝</li>
                     <li>- [2020.02.24] フロンタウンカップ 3位</li>
                     <li>- [2020.02.24] ラゾラック杯 4位</li>
                     <li>- [2020.02.02] ルベントカップ 優勝</li>
