--- a/public/index.html
+++ b/public/index.html
@@ -582,7 +582,9 @@
                   <div class="btn-group btn-group-sm" role="group" aria-label="Result Detail">
                     <button type="button" class="btn btn-secondary">2023年</button>
                     <button type="button" class="btn btn-secondary">2022年</button>
-                    <button type="button" class="btn btn-secondary">2021年</button>
+                    <a class="btn btn-primary"
+                      href="https://docs.google.com/spreadsheets/d/1k7ckDCcMAykJLQSnBba0FXeWhnazfNLHXqesx3BiuTU/edit#gid=0"
+                      role="button" target="_blanky">2021年</a>
                     <a class="btn btn-primary"
                       href="https://docs.google.com/spreadsheets/d/1u3rOUtOvQt5aXn541v-mOAAOFeBSqjQAiVtfp30ZRBg/edit#gid=0"
                       role="button" target="_blank">2020年</a>
